# py-rbac

./: .gitignore  README.md  setup.cfg
rbac/: __init__.py
tests/: test_scenario_constraints.py  test_scenario_flat.py  test_scenario_hierarchy.py
