[metadata]
name = py-rbac
version = 20.12.3
license_file = LICENSE
author = Murat Gözel
author_email = murat@gozel.com.tr
description = Python implementation of the NIST model for role based access control (RBAC).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rbac, access control, role based access control
url = https://github.com/muratgozel/py-rbac
project_urls =
    Source = https://github.com/muratgozel/py-rbac
    Documentation = https://github.com/muratgozel/py-rbac
    Bug Reports = https://github.com/muratgozel/py-rbac/issues
    Funding = https://ko-fi.com/muratgozel
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = rbac
